# slide-stream

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  slide-stream.py  slidestream.example.yaml
.github/workflows/: ci.yml  desktop.yml  docker.yml  pages.yml
contrib/chatterbox/: cleanup_uuid_voices.sh
contrib/voicebox/: sweep_ephemeral_profiles.py
deploy/: .env.example  Dockerfile  README.md  docker-compose.yml  slidestream.yaml.example
desktop/: .gitignore  README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html
docs/: DEVELOPMENT_WORKFLOW.md  USER_GUIDE.md  USE_CASES.md  avatar-feature-plan.md  index.md  liveportrait-api.md  nonhuman-avatar-api.md  sadtalker-api.md  talking-head-options.md  voicebox-api.md  wan-s2v-api.md  wav2lip-api.md
landing/: CNAME  index.html  styles.css
src/slide_stream/: __init__.py  __main__.py  avatars.py  cli.py  config_loader.py  doctor.py  draft.py  enrich.py  llm.py  media.py  narration.py  parser.py  powerpoint.py  scan.py  serve.py
src/slide_stream/providers/: __init__.py  avatar.py  base.py  factory.py  images.py  tts.py
tests/: __init__.py  conftest.py  test_avatar.py  test_avatars_builtin.py  test_cli.py  test_config_loader.py  test_doctor.py  test_draft.py  test_enrich.py  test_llm.py  test_narration.py  test_parser.py  test_powerpoint.py  test_providers.py  test_serve.py  test_sweep_voicebox.py
tests/live/: _live_helpers.py  conftest.py  test_live_avatar.py  test_live_enrich.py  test_live_full_deck.py  test_live_images.py  test_live_llm.py  test_live_tts.py
