[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slide-stream"
version = "2.10.0"
description = "An AI-powered tool to automatically create video presentations from Markdown and PowerPoint files"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Michael Borck", email = "michael.borck@curtin.edu.au" },
]
keywords = ["ai", "video", "presentation", "markdown", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "gtts>=2.4.0",
    "moviepy>=2.0.0,<3.0.0",
    "numpy>=1.26.0",
    "pillow>=11.3.0",
    "pyyaml>=6.0.0",
    "python-pptx>=1.0.2",
]

[project.optional-dependencies]
# AI providers
gemini = ["google-generativeai>=0.8.0", "google-genai>=1.0.0"]
openai = ["openai>=1.40.0"]
claude = ["anthropic>=0.40.0"]
groq = ["groq>=0.11.0"]
elevenlabs = ["elevenlabs>=1.5.0,<3.0.0"]
# Fully offline TTS (Kokoro-82M via ONNX; ~340MB one-time model download)
local-tts = [
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.12.0",
    "espeakng-loader>=0.2.4",
]
# Web UI (slide-stream serve): upload a deck + voice + photo, render in the browser
serve = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
]
all-ai = [
    "google-generativeai>=0.8.0",
    "google-genai>=1.0.0",
    "openai>=1.40.0",
    "anthropic>=0.40.0",
    "groq>=0.11.0",
    "elevenlabs>=1.5.0,<3.0.0",
]
# Development tooling lives in [dependency-groups] dev (uv), not an extra.

[project.scripts]
slide-stream = "slide_stream.cli:app"

[project.urls]
Homepage = "https://github.com/michael-borck/slide-stream"
Repository = "https://github.com/michael-borck/slide-stream"
Issues = "https://github.com/michael-borck/slide-stream/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/slide_stream"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise from None - not critical for this CLI tool
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["slide_stream"]

[tool.basedpyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/._*"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
# pytest autouse fixtures are invoked by the framework, not by name.
executionEnvironments = [
    { root = "tests", reportUnusedFunction = false },
]
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Coverage flags live in CI (see .github/workflows/ci.yml), not here:
# forcing --cov on every local run slows the inner loop and leaves stale
# coverage.xml/htmlcov artifacts that misrepresent real coverage.
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "live: end-to-end test against real, configured providers (opt-in: --run-live)",
    "slow: unusually slow live test (e.g. a GPU avatar render)",
]

[tool.coverage.run]
source = ["slide_stream"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.4",
    "build>=1.2.2.post1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.0",
    "twine>=6.1.0",
    # serve extra, needed to lint/type/test the web UI in CI
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]
